# rust-bitcoin

./: Cargo.toml  README.md  example_functions.txt
.circleci/: config.yml
.github/workflows/: check-and-lint.yml  ci.yml  tests.yml
githooks/: README.md  pre-commit  pre-push
simple-blockchain/: Cargo.toml
simple-blockchain/src/: bech32.rs  block.rs  blockchain.rs  helpers.rs  lib.rs  main.rs  wallet.rs
src/: base58check.rs  bech32.rs  bip144.rs  bip32.rs  bip39.rs  block.rs  blockchain.rs  helpers.rs  lib.rs  transaction.rs  wallet.rs
tests/: base58check.rs  bech32.rs  bip32.rs  bip39.rs  helpers.rs  wallet.rs
