[package]
name = "btc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137",  features = ["derive"] }
serde_json = "1.0.81"
sha256 = "1.0.3"
num = "0.4.0"
num-bigint = "0.4"
chrono = "0.4"
rand = { version = "0.8.5",  features = ["std"] }
secp256k1 = "0.22.1"
hex = "0.4.3"
ripemd = "0.1.1"
thiserror = "1.0.31"
pbkdf2 = "0.11.0"
unicode-normalization = "0.1.19"
